@@ -1,3 +1,12 @@
+GetTime v1.1 | Discord Bot v1.1 | 
+Added:
+  * Error handler/logger for when something is missing in settings.json
+Changed:
+Fixed:
+Sidenotes:
+
+-----------------------------------------------------------------------------------------------------------------------------------------------------
+
 GetTime v1.0 | Discord Bot v1.0 | 2021-05-11
 
 Added:
